kubernetes/namespaces/default/linkding/service.yml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  selector:
    app: linkding
  ports:
    - name: linkding
      port: 80
      targetPort: linkding
